--- a/README.Rmd
+++ b/README.Rmd
@@ -80,7 +80,7 @@ component_plot(ICS_out$ICS_out, select = ICS_out$select, clusters = as.factor(IC
 
 # to change the scatter pair
 ICS_out <- ICSClust(X, nb_select = 1, nb_clusters = 3,
-                ICS_args = list(S1 = ICS_mcd, S2 = ICS_cov,
+                ICS_args = list(S1 = ICS_mcd_raw, S2 = ICS_cov,
                                 S1_args = list(alpha = 0.5)))
 table(ICS_out$clusters, iris[,5])
 component_plot(ICS_out$ICS_out, clusters = as.factor(ICS_out$clusters))
@@ -88,7 +88,7 @@ component_plot(ICS_out$ICS_out, clusters = as.factor(ICS_out$clusters))
 
 # to change the criteria to select the invariant components
 ICS_out <- ICSClust(X, nb_clusters = 3,
-                ICS_args = list(S1 = ICS_mcd, S2 = ICS_cov,
+                ICS_args = list(S1 = ICS_mcd_raw, S2 = ICS_cov,
                                 S1_args = list(alpha = 0.5)),
                 criterion = "normal_crit",
                 ICS_crit_args = list(level = 0.1, test = "anscombe.test",
@@ -99,7 +99,7 @@ component_plot(ICS_out$ICS_out, select = ICS_out$select, clusters = as.factor(IC
 
 # to change the clustering method
 ICS_out <- ICSClust(X, nb_select = 1, nb_clusters = 3,
-                ICS_args = list(S1 = ICS_mcd, S2 = ICS_cov,
+                ICS_args = list(S1 = ICS_mcd_raw, S2 = ICS_cov,
                                 S1_args = list(alpha = 0.5)),
                 method  = "tkmeans_clust",
                 clustering_args = list(alpha = 0.1))
